# polygloty

./: .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  README.md  _quarto-slides.yml  _quarto.yml  index.html  index.qmd  pixi.toml  pyproject.toml  requirements.txt  search.json  setup.R  sitemap.xml
.github/workflows/: publish.yml  test-mac-arm.yml
R/: example-plot.R
_extensions/coatless-quarto/embedio/: _extension.yml  embedio.lua
assets/: slides.html
book/: anndataR.qmd  book_slides.html  book_slides.qmd  file_formats.html  file_formats.qmd  in_memory.html  in_memory.qmd  in_memory2.qmd  in_memory_interoperability.html  in_memory_interoperability.qmd  intro.html  intro.qmd  introduction.html  introduction.qmd  on_disk_interoperability.html  on_disk_interoperability.qmd  references.bib  references.html
book/disk_based/: _general_file_formats.qmd  _specialized_file_formats.qmd  disk_based_pipelines.html  disk_based_pipelines.qmd  file_formats.html  file_formats.qmd  index.html  index.qmd
book/disk_based/scripts/: 1_load_data.sh  3_analysis_de.R  setup.sh
book/in_memory/: index.html  index.qmd  pitfalls.html  pitfalls.qmd  reticulate.html  reticulate.qmd  rpy2.html  rpy2.qmd
book/inmemory/: in_memory_interoperability.qmd
book/usecase/: index.html  index.qmd
book/workflow_frameworks/: best_practices.html  best_practices.qmd  index.html  index.qmd  qualities.html  qualities.qmd  quality_assessment.html  quality_assessment.qmd  review.html  review.qmd  viash_nextflow.html  viash_nextflow.qmd
book/workflow_frameworks/data/: criteria.csv  wf_aggregated_scores.csv  wf_metadata.csv
book/workflow_frameworks/examples/nextflow/nf-core/tests/: main.nf.test
book/workflow_frameworks/examples/nextflow/wratten2021_poc/: main.nf
book/workflow_frameworks/examples/viash_nextflow/: .gitignore  _viash.yaml
book/workflow_frameworks/examples/viash_nextflow/src/compute_pseudobulk/: config.vsh.yaml  script.py  test.py
book/workflow_frameworks/examples/viash_nextflow/src/differential_expression/: config.vsh.yaml  script.R  test.R
book/workflow_frameworks/examples/viash_nextflow/src/load_data/: config.vsh.yaml  script.sh  test.sh
book/workflow_frameworks/examples/viash_nextflow/src/subset_obs/: config.vsh.yaml  script.py  test.py
book/workflow_frameworks/examples/viash_nextflow/src/subset_var/: config.vsh.yaml  script.py  test.py
book/workflow_frameworks/examples/viash_nextflow/src/workflow/: config.vsh.yaml  main.nf  run.sh
book/workflow_frameworks/examples/wdl/wratten2021_poc/: fastqc.wdl
book/workflows/: index.html  index.qmd
book/workflows/examples/wdl/biowdl/: fastqc.wdl
notebooks/: .gitignore  anndataR.html  anndataR.qmd  file_formats.html  file_formats.qmd  in_memory.html  in_memory.qmd  usecase.html  usecase.qmd  workflows.html  workflows.qmd
notebooks/workflows/: index.html  index.qmd
notebooks/workflows/data/: wf_aggregated_scores.csv  wf_metadata.csv
notebooks/workflows/examples/snakemake/wratten2021_poc/: fastqc.smk
notebooks/workflows/examples/wdl/biowdl/: fastqc_full.wdl
pr-preview/pr-1/: robots.txt  search.json  sitemap.xml
pr-preview/pr-1/book/: introduction.html  on_disk_interoperability.html  references.html
pr-preview/pr-1/book/in_memory/: rpy2.html
pr-preview/pr-1/book/workflow_frameworks/: quality_assessment.html  viash_nextflow.html
pr-preview/pr-2/: search.json  sitemap.xml
pr-preview/pr-2/book/: introduction.html  references.html
pr-preview/pr-2/book/disk_based/: disk_based_pipelines.html  index.html
pr-preview/pr-2/book/in_memory/: rpy2.html
pr-preview/pr-2/book/workflow_frameworks/: index.html  qualities.html  viash_nextflow.html
scripts/: 1_load_data.sh  2_compute_pseudobulk.py  3_analysis_de.R  renv_pipeline.R  setup.R  setup.sh
slides/: convert_slides.sh  slides.css  slides.html  slides.qmd
